--- a/app/package.json
+++ b/app/package.json
@@ -51,6 +51,7 @@
     "karma-coverage": "latest",
     "karma-mocha": "latest",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-say-reporter": "^0.1.0",
     "karma-sinon-chai": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "latest",
